--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <body>
         <div>
             <h1>Hola queridos </h1>
+            <h2>Modificado</h2>
         </div>
     </body>
 </body>
